[package]
name = "nodle-chain-executor"
version = "2.0.0-rc6"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"

[dependencies]
nodle-chain-runtime = { version = "2.0.0-rc6", path = "../runtime" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }

[features]
wasmtime = [
	"sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []