[package]
name = "nodle-chain-primitives"
version = "2.0.0-rc6"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"

[dependencies]
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
parity-scale-codec = { version = "1.2.0", default-features = false, features = ["derive"] }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

[features]
default = ["std"]
std = [
	"frame-system/std",
    "parity-scale-codec/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
