[package]
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"
name = "nodle-chain-runtime"
version = "2.0.0-rc6"

[features]
default = ["std"]
std = [
  "cumulus-message-broker/std",
	"cumulus-parachain-upgrade/std",
  "cumulus-primitives/std",
  "cumulus-runtime/std",
  "cumulus-upward-message/std",
  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "nodle-chain-primitives/std",
  "frame-system-rpc-runtime-api/std",
  "pallet-allocations/std",
  "pallet-amendments/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-cumulus-token-dealer/std",
  "pallet-emergency-shutdown/std",
  "pallet-grants/std",
  "pallet-identity/std",
  "pallet-indices/std",
  "pallet-mandate/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-parachain-info/std",
  "pallet-proxy/std",
  "pallet-randomness-collective-flip/std",
  "pallet-recovery/std",
  "pallet-reserve/std",
  "pallet-root-of-trust/std",
  "pallet-root-of-trust-runtime-api/std",
  "pallet-scheduler/std",
  "pallet-tcr/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-utility/std",
  "parity-scale-codec/std",
  "safe-mix/std",
  "serde",
  "sp-api/std",
  "sp-application-crypto/std",
  "sp-block-builder/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "frame-system-benchmarking",
  "pallet-allocations/runtime-benchmarks",
  "pallet-amendments/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-emergency-shutdown/runtime-benchmarks",
  "pallet-grants/runtime-benchmarks",
  "pallet-identity/runtime-benchmarks",
  "pallet-indices/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-reserve/runtime-benchmarks",
  "pallet-root-of-trust/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-tcr/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = [
	"cumulus-upward-message/runtime-wasm",
]

[dependencies]
cumulus-runtime = { git = "https://github.com/paritytech/cumulus",  default-features = false }
cumulus-parachain-upgrade = { git = "https://github.com/paritytech/cumulus",  default-features = false }
cumulus-message-broker = { git = "https://github.com/paritytech/cumulus",  default-features = false }
cumulus-upward-message = { git = "https://github.com/paritytech/cumulus",  default-features = false }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch", optional = true }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch", optional = true }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
nodle-chain-primitives = { version = "2.0.0-rc6", default-features = false, path = "../primitives" }
pallet-allocations = { version = "2.0.0-rc6", default-features = false, path = "../pallets/allocations" }
pallet-amendments = { version = "2.0.0-rc6", default-features = false, path = "../pallets/amendments" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-collective = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-cumulus-token-dealer = { path = "../pallets/token-dealer", default-features = false}
pallet-emergency-shutdown = { version = "2.0.0-rc6", default-features = false, path = "../pallets/emergency-shutdown" }
pallet-grants = { version = "2.0.0-rc6", default-features = false, path = "../pallets/grants" }
pallet-identity = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-indices = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-mandate = { git = "https://github.com/ETeissonniere/pallet-mandate", default-features = false, branch = "rococo-branch"  }
pallet-membership = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-multisig = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-parachain-info = { path = "../pallets/parachain-info", default-features = false}
pallet-proxy = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-recovery = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-reserve = { version = "2.0.0-rc6", default-features = false, path = "../pallets/reserve" }
pallet-root-of-trust = { version = "2.0.0-rc6", default-features = false, path = "../pallets/root-of-trust" }
pallet-root-of-trust-runtime-api = { version = "2.0.0-rc6", default-features = false, path = "../pallets/root-of-trust/rpc/runtime-api" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-tcr = { version = "2.0.0-rc6", default-features = false, path = "../pallets/tcr" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-utility = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
parity-scale-codec = { version = "1.2.0", default-features = false, features = ["derive"] }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.110", optional = true, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
static_assertions = "1.1.0"

[build-dependencies]
substrate-wasm-builder-runner = "1.0.6"
