[package]
name = "pallet-grants"
description = "Provides scheduled balance locking mechanism, in a *graded vesting* way."
license = "Apache-2.0"
version = "2.0.0-rc6"
authors = ["Eliott Teissonniere <git.eliott@teissonniere.org>"]
edition = "2018"

[features]
default = ["std"]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"serde",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch", optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
serde = { version = "1.0.110", optional = true }
parity-scale-codec = { version = "1.2.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }