[package]
name = "pallet-root-of-trust"
version = "2.0.0-rc6"
authors = ['Eliott Teissonniere <git.eliott@teissonniere.org>']
edition = "2018"
description = "This pallet implements a distributed Root Of Trust for Certification Authorities"

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-tcr/std",
  "parity-scale-codec/std",
  "serde",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
  "frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch", optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
pallet-tcr = { version = "2.0.0-rc6", default-features = false, path = "../tcr" }
parity-scale-codec = { version = "1.2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.110", optional = true, features = ["derive"] }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
