[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
name = "pallet-cumulus-token-dealer"
version = "0.1.0"

[dependencies]
cumulus-upward-message = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = 'f006b0e1705396107cc6f717251824fa9f5756f8' }
cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = 'f006b0e1705396107cc6f717251824fa9f5756f8' }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
parity-scale-codec = { version = "1.2.0", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false }

[features]
default = ["std"]
std = [
    "cumulus-upward-message/std",
    "cumulus-primitives/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "polkadot-parachain/std",
]
